<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name_is"
        android:textSize="@dimen/default_size"
        android:id="@+id/txtName1"
        android:padding="@dimen/default_padding"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_name"
        android:textSize="@dimen/default_size"
        android:id="@+id/txtName"
        android:padding="@dimen/default_padding"
        android:layout_below="@id/txtName1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_age_is"
        android:textSize="@dimen/default_size"
        android:id="@+id/txtAge1"
        android:padding="@dimen/default_padding"
        android:layout_below="@id/txtName"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_age"
        android:textSize="@dimen/default_size"
        android:id="@+id/txtAge"
        android:layout_below="@id/txtAge1"
        android:padding="@dimen/default_padding"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_number_is"
        android:textSize="@dimen/default_size"
        android:id="@+id/txtNumber1"
        android:padding="@dimen/default_padding"
        android:layout_below="@id/txtAge"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_number"
        android:textSize="@dimen/default_size"
        android:id="@+id/txtNumber"
        android:layout_below="@id/txtNumber1"
        android:padding="@dimen/default_padding"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:id="@+id/btnExit"
        android:textSize="@dimen/default_size"
        android:padding="@dimen/default_padding"
        android:layout_below="@id/txtNumber"/>

</RelativeLayout>